--- a/CSS/Carrito.css
+++ b/CSS/Carrito.css
@@ -37,7 +37,7 @@
     display: block;
     width: 50%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #bec3b6;
     color: #fff;
     border: none;
     border-radius: 5px;
